gitops/manifests/radarr/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
    spec:
      securityContext:
        runAsUser: 321  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321
      nodeSelector:
          kubernetes.io/hostname: stuart 
      containers:
      - name: radarr
        image: ghcr.io/hotio/radarr
        imagePullPolicy: Always
        ports:
        - containerPort: 7878 
        resources:
          requests:
            memory: "5G"  
            cpu: "500m"      
          limits:
            memory: "10G"  
            cpu: "1000m"
        volumeMounts:
        - mountPath: /config  # Mount for Radarr config
          name: config-storage
        - mountPath: /data # Single volume for Movies and Downloads
          name: data-storage
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: pvc-radarr-config # PVC for config storage
      - name: data-storage
        persistentVolumeClaim:
          claimName: pvc-radarr-data   # PVC for data storage
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 7878 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
  tls:
  - hosts:
      - radarr.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
